Replace NSEvent monitoring with QuickMacHotKey for proper hotkey interception
- Add quickmachotkey library (v2025.7.28) via uv
- Replace HotkeyMonitor class with @quickHotKey decorator
- Hotkey now properly intercepts Cmd+Option+Control+D
- Prevents keypress from reaching terminal (no more escape sequences)
- Simplified code: removed 90+ lines of manual event handling
- QuickMacHotKey automatically consumes the hotkey event

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,5 @@ dependencies = [
     "pyobjc-framework-quartz>=12.1",
     "pyperclip>=1.11.0",
     "python-dotenv>=1.2.1",
+    "quickmachotkey>=2025.7.28",
 ]
